# NginD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxyfile  main.cc
cmake/: CMakeLists.txt
doc/source/: conf.py  index.rst
editor/: designer.cc  package.json
editor/app/: index.html  main.js
exec/: inject.sh
include/SOIL2/: stb_image.h
include/box2d/: b2_common.h
include/opengl/: glad.c  glfw3.h
include/rapidjson/: document.h
include/rttr/: library.h  registration  registration_friend  type
include/snappy/: snappy-stubs-public.h
kernel/: CMakeLists.txt  game.cc  game.h  settings.h
kernel/animation/: CMakeLists.txt  aseprite.cc  aseprite.h  aseprite_frame.cc  aseprite_frame.h  aseprite_tag.cc  aseprite_tag.h
kernel/audio/: CMakeLists.txt  audio.cc  audio.h  audio_manager.cc  audio_manager.h
kernel/basic/: game.cc  object.cc  object.h
kernel/components/: CMakeLists.txt  animation.cc  animation.h  button.cc  button.h  component.cc  component.h  component_factory.cc  component_factory.h  effect_player.cc  effect_player.h  label.cc  label.h  music_player.cc  music_player.h  render_component.h  renderer_component.h  sprite.cc  sprite.h  sprite_render.cc  sprite_render.h  sprite_renderer.cc  sprite_renderer.h  state_machine.cc  state_machine.h
kernel/compress/: main.cc
kernel/controller/: controller.cc  controller.h
kernel/coroutine/: CMakeLists.txt  coroutine.cc  coroutine.h
kernel/crypto/: CMakeLists.txt  aes.cc  aes.h  main.cc
kernel/exceptions/: CMakeLists.txt  game_exception.h
kernel/filesystem/: CMakeLists.txt  audio_stream.cc  cipher_input_stream.cc  cipher_input_stream.h  cipher_output_stream.cc  cipher_output_stream.h  data_input_stream.cc  data_input_stream.h  directory.cc  directory.h  file.cc  file.h  file_input_stream.cc  file_input_stream.h  file_output_stream.cc  file_output_stream.h  file_utils.cc  file_utils.h  filter_input_stream.cc  filter_input_stream.h  ini_config.cc  ini_config.h  input_stream.cc  input_stream.h  object_input_stream.cc  object_input_stream.h  object_output_stream.cc  output_stream.cc  output_stream.h  zip_input_stream.cc  zip_input_stream.h
kernel/input/: CMakeLists.txt  input.cc  input.h  keyboard_input.cc  keyboard_input.h  mouse_input.cc  mouse_input.h  text_input.cc  text_input.h
kernel/log/: CMakeLists.txt  log_level.h  logger.cc  logger.h  logger_factory.cc  logger_factory.h  visual_logger.cc  visual_logger.h
kernel/math/: CMakeLists.txt  galois_field.cc  galois_field.h  random.cc  random.h  vector.cc  vector.h
kernel/memory/: CMakeLists.txt  auto_collection_object.cc  auto_collection_object.h  memory_pool.cc  memory_pool.h
kernel/model/: model.cc  model.h
kernel/objects/: CMakeLists.txt  entity_object.cc  entity_object.h  object.cc  object.h  object_factory.cc  object_factory.h  object_pool.cc  object_pool.h  prefab_factory.cc  prefab_factory.h  updatable_object.h  world.cc  world.h
kernel/reflection/: class_info.cc  class_info.h  reflection_injector.h
kernel/render/: CMakeLists.txt  font_factory.cc  font_factory.h  perspective.cc  perspective.h  png_image.cc  png_image.h  program.cc  program.h  quad.cc  quad.h  render.cc  render.h  render_command.cc  render_command.h  render_queue.cc  render_queue.h  rgba.h  shader.cc  shader.h  texture.cc  texture.h  true_type_font.cc  true_type_font.cpp  true_type_font.h  window.cc  window.h
kernel/rendering/: CMakeLists.txt  adaptor.cc  adaptor.h  batch_quad_rendering_command.cc  batch_quad_rendering_command.h  camera.cc  camera.h  character.h  color.h  font_factory.cc  font_factory.h  perspective.cc  perspective.h  program.cc  program.h  quad.cc  quad.h  quad_rendering_command.cc  quad_rendering_command.h  render_command.h  renderer.cc  renderer.h  rendering_command.h  rendering_queue.cc  rendering_queue.h  rgba.h  shader.cc  shader.h  texture.cc  texture.h  true_type_font.cc  true_type_font.h  window.cc  window.h
kernel/resources/: CMakeLists.txt  ConfigResource.h  ImageResource.h  TextResource.h  animation_resource.cc  animation_resource.h  config_resource.cc  config_resource.h  effect_resource.cc  effect_resource.h  font_resource.cc  font_resource.h  image_resource.cc  image_resource.h  music_resource.cc  music_resource.h  program_resource.cc  program_resource.h  resource.h  resources_manager.cc  resources_manager.h  shader_resource.cc  shader_resource.h  texture_resource.cc  texture_resource.h
kernel/script/: CMakeLists.txt  barrier.cc  barrier.h  lua_registration.h  lua_state.cc  lua_state.h  observer.cc  observer.h
kernel/timer/: timer.cc  (+2 more)
ngind/: CMakeLists.txt
ngind/kernel/: CMakeLists.txt  game.cc
ngind/kernel/components/: CMakeLists.txt  component.h
ngind/kernel/filesystem/: CMakeLists.txt  audio_stream.h  cipher_input_stream.h  cipher_output_stream.h  file_input_stream.cc  file_output_stream.cc  file_output_stream.h  input_stream.cc  object_output_stream.h  output_stream.cc
ngind/kernel/input/: CMakeLists.txt  input.h  keyboard_input.h  mouse_input.h  text_input.cc  text_input.h
ngind/kernel/log/: CMakeLists.txt  log_level.h  logger.h  logger_factory.cc
ngind/kernel/math/: CMakeLists.txt  vector.h
ngind/kernel/memory/: CMakeLists.txt
ngind/kernel/objects/: CMakeLists.txt  entity_object.h  object.cc  object.h  world.h
ngind/kernel/render/: CMakeLists.txt  font_factory.cc  perspective.h  png_image.h  program.cc  program.h  quad.cc  quad.h  render.h  render_command.h  render_queue.h  shader.cc  true_type_font.h
ngind/kernel/resources/: CMakeLists.txt  font_resource.cc  program_resource.cc  resource.h  shader_resource.h
ngind/kernel/timer/: CMakeLists.txt
ngind/kernel/utils/: CMakeLists.txt
plugin/: CMakeLists.txt  config.h
settings/: display_settings.h  log_setting.h  resources_settings.h
tools/: create.sh  publish.sh  sm.sh  world.sh
win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NginD.sln  NginD.vcxproj  NginD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compress.vcxproj  compress.vcxproj.filters  crypto.vcxproj  crypto.vcxproj.filters
(+176 files in other folders)
