project(NginD)

aux_source_directory(. RENDER_SRC_DIR)
add_library(render ${RENDER_SRC_DIR})

target_link_libraries(render "${CMAKE_SOURCE_DIR}/${PLATFORM_PREFIX}/opengl/libGLEW.so")
target_link_libraries(render "${CMAKE_SOURCE_DIR}${PLATFORM_PREFIX}/opengl/libglfw.so")
target_link_libraries(render "${CMAKE_SOURCE_DIR}/${PLATFORM_PREFIX}/opengl/libglfw3.a")
target_link_libraries(render "${CMAKE_SOURCE_DIR}/${PLATFORM_PREFIX}/opengl/libglfw.so.3")
target_link_libraries(render "${CMAKE_SOURCE_DIR}${PLATFORM_PREFIX}/opengl/libGL.so")
target_link_libraries(render "${CMAKE_SOURCE_DIR}${PLATFORM_PREFIX}/opengl/libX11.so")
target_link_libraries(render "${CMAKE_SOURCE_DIR}${PLATFORM_PREFIX}/opengl/libXrand.so")
target_link_libraries(render "${CMAKE_SOURCE_DIR}/${PLATFORM_PREFIX}/opengl/libXi.so")
target_link_libraries(render "${CMAKE_SOURCE_DIR}/${PLATFORM_PREFIX}/opengl/libXi.a")
target_link_libraries(render "${CMAKE_SOURCE_DIR}/${PLATFORM_PREFIX}/libpng/libpng16.so.16")
target_link_libraries(render "${CMAKE_SOURCE_DIR}/${PLATFORM_PREFIX}/soil2/libsoil2.a")
target_link_libraries(render "${CMAKE_SOURCE_DIR}/${PLATFORM_PREFIX}/soil2/libsoil2.so")
target_link_libraries(render "/usr/local/lib/libfreetype.so")
target_link_libraries(render "/usr/local/lib/libfreetype.a")
target_link_libraries(render input)